test/corpus/declarations.txt
================================================================================
Simple function
================================================================================

fn main() {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list)
    body: (block)))

================================================================================
Function with parameters and return type
================================================================================

fn add(a: I32, b: I32) -> I32 {
  return a + b
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (named_type
          (type_path
            (identifier))))
      (parameter
        name: (identifier)
        type: (named_type
          (type_path
            (identifier)))))
    (return_type
      type: (named_type
        (type_path
          (identifier))))
    body: (block
      (return_statement
        (binary_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
Function with single generic parameter
================================================================================

fn id[T](value: T) -> T {
  return value
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (generic_parameter_list
      (generic_parameter_definition
        name: (identifier)))
    (parameter_list
      (parameter
        name: (identifier)
        type: (named_type
          (type_path
            (identifier)))))
    (return_type
      type: (named_type
        (type_path
          (identifier))))
    body: (block
      (return_statement
        (identifier)))))

================================================================================
Function with multiple generic parameters
================================================================================

fn foo[T, U]() {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (generic_parameter_list
      (generic_parameter_definition
        name: (identifier))
      (generic_parameter_definition
        name: (identifier)))
    (parameter_list)
    body: (block)))

================================================================================
Function with empty generic parameter list
================================================================================

fn foo[]() {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (generic_parameter_list)
    (parameter_list)
    body: (block)))

================================================================================
Struct definition
================================================================================

struct Point {
  x: I32,
  y: I32
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (named_type
          (type_path
            (identifier))))
      (struct_field
        name: (identifier)
        type: (named_type
          (type_path
            (identifier)))))))

================================================================================
Generic struct definition
================================================================================

struct Foo[T, U] {
  some_value: T,
  b: U
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (generic_parameter_list
      (generic_parameter_definition
        name: (identifier))
      (generic_parameter_definition
        name: (identifier)))
    body: (struct_body
      (struct_field
        name: (identifier)
        type: (named_type
          (type_path
            (identifier))))
      (struct_field
        name: (identifier)
        type: (named_type
          (type_path
            (identifier)))))))

================================================================================
Function with self parameter
================================================================================

fn foo(self, x: I32) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (self_parameter)
      (parameter
        name: (identifier)
        type: (named_type
          (type_path
            (identifier)))))
    body: (block)))

================================================================================
Function with self parameter only
================================================================================

fn bar(self) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (self_parameter))
    body: (block)))

================================================================================
Receiver function
================================================================================

fn (MyType) foo[T](self) {
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    receiver: (receiver
      type: (named_type
        (type_path
          (identifier))))
    name: (identifier)
    (generic_parameter_list
      (generic_parameter_definition
        name: (identifier)))
    (parameter_list
      (self_parameter))
    body: (block)))

================================================================================
Type alias with named type
================================================================================

type MyInt = I32

--------------------------------------------------------------------------------

(source_file
  (type_alias
    name: (identifier)
    type: (named_type
      (type_path
        (identifier)))))

================================================================================
Type alias with structural type
================================================================================

type Range = { low: I64, high: I64 }

--------------------------------------------------------------------------------

(source_file
  (type_alias
    name: (identifier)
    type: (structural_type
      (structural_type_field
        name: (identifier)
        type: (named_type
          (type_path
            (identifier))))
      (structural_type_field
        name: (identifier)
        type: (named_type
          (type_path
            (identifier)))))))

================================================================================
Extern block
================================================================================

unsafe extern "java" {
  ["java/io/PrintStream"]
  type PrintStream {
    ["println"]
    fn printString(string: String)

    ["out"]
    static let out: PrintStream
  }
}

--------------------------------------------------------------------------------

(source_file
  (extern_block
    language: (string_literal)
    (extern_item
      (item_metadata
        (string_literal))
      (extern_type
        name: (identifier)
        body: (extern_type_body_item
          (item_metadata
            (string_literal))
          (extern_function
            name: (identifier)
            (parameter_list
              (parameter
                name: (identifier)
                type: (named_type
                  (type_path
                    (identifier)))))))
        body: (extern_type_body_item
          (item_metadata
            (string_literal))
          (extern_static_let
            name: (identifier)
            type: (named_type
              (type_path
                (identifier)))))))))
